EKS/frontend/manifest/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
spec:
  selector:
    app: web-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
